--- a/templates/user.html
+++ b/templates/user.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}Index{% endblock %}
-{% block head %}
-    {{ super() }}
-    <style>
-    </style>
-{% endblock %}
+
 {% block body %}
-    <h1>Hello, {{ name }}</h1>
+
+{% include 'navbar.html' %}
+
+{% block content %}
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">Hello, {{ name }}</h1>
+    </div>
+</div>
+{% endblock %}
+
 {% endblock %}
