--- a/templates/user.html
+++ b/templates/user.html
@@ -5,6 +5,7 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4">Hello, {{ name }}</h1>
+        {{ moment(current_time).format('LLLL') }}
     </div>
 </div>
 {% endblock %}
