--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <title>{% block title %}{% endblock %} - My App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
+
     {{ moment.include_jquery() }}
     {{ moment.include_moment() }}
     {{ moment.lang('id')}}
@@ -15,6 +15,14 @@
 <body>
 
     {% include 'navbar.html' %}
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
     {% block content %} {% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
