--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-        <h1>Hello, World!</h1>
+        <h1>Hello, {% if name %}{{ name}}{% else %}World!{% endif %}</h1>
         <form method="POST">
             {{ form.hidden_tag() }}
             {{ form.nama.label() }}
