--- a/templates/user.html
+++ b/templates/user.html
@@ -6,6 +6,12 @@
     <div class="container">
         <h1 class="display-4">Hello, {{ name }}</h1>
         {{ moment(current_time).format('LLLL') }}
+        <form method="POST">
+            {{ form.hidden_tag() }}
+            {{ form.nama.label() }}
+            {{ form.nama() }}
+            {{ form.submit() }}
+        </form>
     </div>
 </div>
 {% endblock %}
