--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
         {% endif %}
         <form method="POST">
             {{ form.hidden_tag() }}
-            {{ form.nama.label() }}
-            {{ form.nama() }}
+            {{ form.name.label() }}
+            {{ form.name() }}
             {{ form.submit() }}
         </form>
     </div>
